<resources>
    <string name="app_name">AR Note Book</string>
    <string name="Listing_name">Listing Of Policies</string>
    <string name="DBmaintitle">"Details of Note Book Item"</string>
    <string name="sumpol">Summary of Policies</string>
    <string name="action_settings">Settings</string>
    <string name="Polno">Policy No.:</string>
    <string name="Poltype">Type:</string>
    <string name="polcover">Insured Amt:</string>
    <string name="Polpremium">Premium:</string>
    <string name="Polincept">Date Incept</string>
    <string name="Polmature"> Date Mature</string>
    <string name="Polcompany"> Company</string>
    <string name="Polriders"> Riders</string>
    <string name="save">Save</string>
    <string name="deletepromt">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_list">Listing Of Policies</string>
    <string name="title_activity_db_maintain">Maintain Policy</string>
    <string name="Home">Home</string>
    <string name="Cancel">Cancel</string>
    <string name="defaultzero">0.00</string>
    <string name="totnopol">Total No. of Policies</string>
    <string name="totpremium">Total Premium"</string>
    <string name="totinsured">Total Insured Amount"</string>
    <string name="title_activity_sec">AR Insurance DB - Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="Security">Security Screen</string>
    <string name="SECPIN">Please Enter Your Pin</string>
    <string name="Confirmpin">Re-confirm PIN</string>
    <string name="Enterpress">(Press Enter to Continue)</string>
    <string name="chk_box_msg">Secure Item</string>
    <string name="Welcomscr">Welcome to AR Note Book</string>
    <string name="copyright">Copyright2018@ARSubahan</string>
    <string name="hint_title">Please Enter Tittle*</string>
    <string name="hint_msg">Please enter you note here*</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wssmode">Mode :</string>
    <string name="cont">Continue</string>
    <string name="bkup">Backup</string>
    <string name="blchr">\u25A1</string>
    <string name="restr">Restore db</string>
    <string name="filemanager">File Manager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="ar_note_book">AR Note Book</string>
    <string name="a_r_note_book">A R Note Book</string>
    <string name="security">Security</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="rowid">ID</string>
    <string name="storage">STORAGE</string>
    <string name="no_files_found">NO FILES FOUND</string>
    <string name="storage1">STORAGE</string>
    <string name="selected">selected</string>

</resources>
