<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DbMaintainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="31dp"
        android:gravity="center"
        android:text="@string/DBmaintitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="95dp"
        android:layout_height="23dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/Add_New"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/black"
        android:textColorHighlight="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/Add_New" />

    <EditText
        android:id="@+id/ediTittle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:autofillHints=""
        android:background="@color/dark_green"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editMsg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="60dp"
        android:background="@color/lbrown"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_msg"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/ch_Box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/cmdcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cmdsave" />

    <Button
        android:id="@+id/cmdsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        app:layout_constraintBaseline_toBaselineOf="@+id/cmdcancel"
        app:layout_constraintStart_toEndOf="@+id/ch_Box" />

    <CheckBox
        android:id="@+id/ch_Box"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:text="@string/chk_box_msg"
        app:layout_constraintBaseline_toBaselineOf="@+id/cmdsave"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>